--- a/web/requirements_web.txt
+++ b/web/requirements_web.txt
@@ -9,6 +9,7 @@ pydantic>=2.0.0
 # Dashboard Web - Dash
 dash>=2.14.0
 dash-bootstrap-components>=1.5.0
+dash-ag-grid>=31.0.0
 plotly>=5.18.0
 
 # HTTP Client pour le dashboard
