--- a/airlines-dbt-postgres/dbt/dbt_project.yml
+++ b/airlines-dbt-postgres/dbt/dbt_project.yml
@@ -36,5 +36,5 @@ models:
       +schema: int
       +materialized: table
     mart:
-      +schema: dwh
+      +schema: public
       +materialized: incremental
