--- a/airlines-dbt-postgres/docker-compose.yml
+++ b/airlines-dbt-postgres/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     container_name: dbt_prepare
     volumes:
       - ${DBT_SOURCE_DIR}:/seed_source 
-      - ${DBT_TARGET_DIR}:/seeds # target seeds mounted into container (and into dbt container in /app/seeds)
+      - ${DBT_TARGET_DIR}:/seeds
+      - ./dbt_prepare:/app
     environment:
       SOURCE_DIR: /seed_source
       TARGET_DIR: /seeds
@@ -40,8 +41,27 @@ services:
     networks:
       - dbt-net
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin_dev
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin/servers.json:/pgadmin4/servers.json
+      - ./pgadmin/pgpass:/pgpass
+    networks:
+      - dbt-net
+    depends_on:
+      - postgres
+
 volumes:
   pgdata:
+  pgadmin_data:
 
 networks:
   dbt-net:
