--- a/.env.default
+++ b/.env.default
@@ -8,6 +8,11 @@ MONGODB_DATABASE=airlines_db
 POSTGRESQL_URI=postgresql://postgres:password@localhost:5432/airlines_db
 ENABLE_POSTGRESQL_INSERTION=true
 
+# DBT
+DBT_SOURCE_DIR=./airlines-dbt-postgres/data
+DBT_TARGET_DIR=./airlines-dbt-postgres/dbt/seeds
+API_NINJAS_KEY=votre_cle_api_ninjas
+
 # Machine Learning
 ML_MODEL_DIR=machine_learning/model_output
 ENABLE_ML_PREDICTION=true
