--- a/airlines-dbt-postgres/dbt_prepare/Dockerfile
+++ b/airlines-dbt-postgres/dbt_prepare/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y wget bash && apt-get clean
+RUN apt-get update && apt-get install -y wget bash dos2unix && apt-get clean
 
 # installation des dépendances python
 COPY requirements.txt .
@@ -14,6 +14,11 @@ COPY cleanup_iata_dups.py .
 COPY alim_airlines_dims.sh . 
 COPY fix_headers.sh .
 COPY run_seed_prepare.sh .
+
+# convertir les fins de ligne CRLF vers LF
+RUN dos2unix /app/alim_airlines_dims.sh \
+    && dos2unix /app/fix_headers.sh \
+    && dos2unix /app/run_seed_prepare.sh
 
 # rendre executables
 RUN chmod +x /app/fleet_average_age.py \
