Refactor database schema and import scripts
- Removed old PostgreSQL dump file `dst_postgresql.sql`.
- Added new schema definition in `01_schema.sql` with complete table and view definitions.
- Created `02_import_ftp.sh` script for automated data restoration from FTP, including downloading and decompressing files.
- Introduced a Dockerfile for PostgreSQL setup, installing curl for FTP downloads.

--- a/.env.default
+++ b/.env.default
@@ -46,6 +46,10 @@ FTP_PASSWORD=votre_mot_de_passe_ftp
 FTP_USE_TLS=false
 FTP_REMOTE_DIRECTORY=/data
 
+# Backup Restore FTP
+FTP_BACKUP_DIR=/backup
+
+
 # Cache Server
 USE_CACHE_SERVER=true
 CACHE_SERVER_URL=https://dst.devlab.app/index.php
