Ajout du service Airflow avec configuration et orchestration des tâches, mise à jour des scripts de collecte de données, et ajustement des permissions des fichiers.

--- a/.env.default
+++ b/.env.default
@@ -54,6 +54,9 @@ FTP_BACKUP_DIR=/backup
 USE_CACHE_SERVER=true
 CACHE_SERVER_URL=https://dst.devlab.app/index.php
 
+# Airflow
+AIRFLOW_UID=1000
+
 # Métadonnées
 SCRIPT_VERSION=2.0
 SOURCE=airportinfo.live
